Fix URL wrapping on small screens

--- a/app/assets/stylesheets/thanks.scss
+++ b/app/assets/stylesheets/thanks.scss
@@ -14,6 +14,12 @@ form#new_thank{
   textarea {
     width: 98%;
   }
+
+  div#deed_url {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
 img.profile {
